<resources>
    <string name="app_name">Simple Lecture</string>
    <string name="action_myProfile">My Profile</string>
    <string name="action_Login">Login</string>
    <string name="action_Logout">Logout</string>
    <string name="action_Signin">Sign up</string>
    <string name="action_ChangePassword">Change Password</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Search</string>
    <string name="hint_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_OldPassword">OldPassword</string>
    <string name="hint_NewPassword">NewPassword</string>
    <string name="hint_ConfirmPassword">ConfirmPassword</string>
    <string name="hint_mobile">Mobile No</string>
    <string name="hint_Name">Name</string>
    <string name="hint_OTPNo">Enter OTP number</string>

    <string name="hint_FullName">Full Name</string>
    <string name="hint_ShippingAddress">Shipping Address</string>
    <string name="hint_State">State</string>
    <string name="hint_Pincode">Pincode</string>
    <string name="hint_City">City</string>


    <string name="loading">Loading&#8230;</string>

    <string name="btn_LogIn">Login</string>
    <string name="btn_ForgotPassword">Forgot Password</string>
    <string name="btn_Submit">Submit</string>
    <string name="btn_sign_up">Sign up</string>
    <string name="btn_verify">Verify</string>
    <string name="btn_PostReviews">Post Reviews</string>
    <string name="btn_Save">Save</string>
    <string name="billingAddress">Billing Address</string>

    <string name="txt_resendOTP">Resend OTP</string>


    <!-- SnackBar Msg-->
    <string name="dismiss">Dismiss</string>

    <!-- Error Msg-->
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="title_activity_login1">Sign in</string>
    <string name="err_msg_MobileNo">Enter the mobile no</string>
    <string name="err_msg_OldPassword">Enter the Old Password</string>
    <string name="err_msg_NewPassword">Enter the New Password</string>
    <string name="err_msg_ConfirmPassword">Enter the Confirm Password</string>
    <string name="err_msg_notMatchConfirmPassword">New Password must match Confirm Password</string>
    <string name="noInternetConnection">No internet connection!</string>
    <string name="loginFailed">Invalid Login</string>
    <string name="entertheReview">Enter the Reviews Field</string>
    <string name="alert">Alert!</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="pleaseLogin">Please Login for more Details</string>
    <string name="AreyousurewanttocloseApp">Are you sure want to close the App? or Use Menu</string>
    <string name="err_msg_shippingAddess">Enter your Shipping Address</string>
    <string name="err_msg_pincode">Enter your PinCode</string>
    <string name="err_msg_State">Enter your State</string>
    <string name="err_msg_Promocode">Enter your Promocode</string>
    <string name="err_msg_City">Enter your City</string>

    <string name="title_activity_home">HomeActivity</string>

    <!--Navigation Drawer-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_Home">Home</string>
    <string name="navigation_drawer_courseCategories">Course Categories</string>
    <string name="navigation_drawer_demo">Sample Videos</string>
    <string name="navigation_drawer_mycourses">My Courses</string>
    <string name="navigation_drawer_excercies">Excercies</string>
    <string name="navigation_drawer_forum">Forum</string>
    <string name="navigation_drawer_Support">Support</string>
    <string name="navigation_drawer_LeagalPolicy">Legal Policy</string>
    <string name="navigation_drawer_AboutUs">About Us</string>
    <string name="navigation_drawer_login">Login</string>
    <string name="navigation_drawer_dashboard">Dashboard</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="comboCourse">Combo Course</string>
    <string name="courseFeature">Course Feature</string>
    <string name="courseDescription">Course Description</string>
    <string name="courseIndex">Course Index</string>
    <string name="courseBenifits">Course Benifits</string>
    <string name="fAQ">FAQ</string>
    <string name="review">Review</string>

    <!-- Dashboard Screen -->
    <string name="dashboard">Dashboard</string>
    <string name="my_courses">My Courses</string>
    <string name="test_papers">Test Papers</string>
    <string name="excercise">Downloads</string>
    <string name="forum">Forum</string>
    <string name="support">Support</string>
    <string name="selectyouCourse">Select your Course</string>


    <!--Home screen-->

    <string name="course">Course</string>
    <string name="mostViewed">Most Popular</string>
    <string name="Testimonials">Testimonials</string>
    <string name="viewall">View all</string>
    <string name="Poweredby">Powered by Simplelecture.com © 2015</string>
    <string name="Youhave">You have </string>
    <string name="coursesinyouraccountchecknow"> courses in your account check now</string>
    <string name="WriteYourReviewshere">Write Your Reviews here</string>


    <!--Facebook_app_id-->
    <string name="facebook_app_id">190332871324339</string>
    <string name="title_activity_select_your_courses">SelectYourCoursesActivity</string>


    <string-array name="months">
        <item>1 Months</item>
        <item>2 Months</item>
        <item>3 Months</item>
        <item>4 Months</item>
        <item>5 Months</item>
        <item>6 Months</item>
        <item>7 Months</item>
        <item>8 Months</item>
        <item>9 Months</item>
        <item>10 Months</item>
        <item>11 Months</item>
        <item>12 Months</item>
    </string-array>

    <string-array name="test">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>

    </string-array>
    <string name="title_activity_dashboard_test_paper_chapter">DashboardTestPaperChapterActivity
    </string>


    <string name="EbsCode">TEST</string>
    <string name="title_activity_splash_main_screen">SplashMainScreenActivity</string>

</resources>
