<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_coumbo"
            android:title="@string/navigation_drawer_combo" />
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_course"
            android:title="@string/navigation_drawer_course" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_demo"
            android:title="@string/navigation_drawer_demo" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_my_courses"
            android:title="@string/navigation_drawer_mycourses" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_excercises"
            android:title="@string/navigation_drawer_excercies" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_forum"
            android:title="@string/navigation_drawer_forum" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:title="@string/navigation_drawer_dashboard" />
    </group>

</menu>
