<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.BillingAddressActivity">


    <include
        android:id="@+id/tool_bar"
        layout="@layout/toolbar"></include>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/textViewbillingAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/billingAddress"
            android:textColor="@color/colorAccent"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_FullName"
            android:layout_width="match_parent"
            android:layout_marginTop="10dip"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_FullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_FullName"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_ShippingAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_ShippingAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_ShippingAddress"
                android:inputType="none" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_City"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_City"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_City"
                android:inputType="none" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_State"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_State"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_State"
                android:inputType="none" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_Pincode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_Pincode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_Pincode"
                android:maxLength="6"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_mobile"
                android:maxLength="10"
                android:inputType="phone" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:enabled="false"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_Save"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@color/colorPrimary"
            android:text="@string/btn_Save"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btn_Pay"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:visibility="gone"
            android:background="@color/colorPrimary"
            android:text="Pay Now"
            android:textColor="@android:color/white" />


    </LinearLayout>

      <include
          android:id="@+id/coordinatorLayout"
          layout="@layout/coordinatelayout"></include>
</RelativeLayout>

