<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.simplelecture.main.activities.OTPcodeActivity">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/toolbar"></include>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="20dp"
        android:paddingTop="60dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_MobileNo"
            android:layout_width="match_parent"
            android:layout_marginTop="5dip"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_MobileNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_mobile"
                android:maxLength="10"
                android:inputType="phone"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:text="We have sent you one time password"
            android:gravity="center"
            android:id="@+id/textViewDisplay" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_otpCode"
            android:layout_width="match_parent"
            android:layout_marginTop="20dip"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_OTPcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_OTPNo"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="@string/txt_resendOTP"
            android:id="@+id/resendOtpTextView"
            android:layout_gravity="right" />

        <Button
            android:id="@+id/btn_verify"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@color/colorPrimary"
            android:text="@string/btn_verify"
            android:textColor="@android:color/white" />

    </LinearLayout>
    <include
        android:id="@+id/coordinatorLayout"
        layout="@layout/coordinatelayout"></include>
</RelativeLayout>
